--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input class="input" type="text" placeholder="Type user...">
         <button class="button">Search Profile</button>
     </section>
-    <footer>
+    <footer class="footer">
         Hecho por <a href="https://www.linkedin.com/in/orlandogonz/" target="_blank">Hugo Orlando Gonzalez</a>
         GitHub <a href="https://github.com/hugoorlando/GitHubProfileFinder" target="_blank">Aquí</a>
     </footer>               
