--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="header">
-        <img class="header_img" src="./img/github_1.svg" alt="">        
+        <img class="header_img" src="./img/icons8-github.svg" alt="">        
     </header>
     <section class="section-1">
         <h1>Welcome to the GitHub Profile Finder</h1> 
@@ -18,9 +18,28 @@
         <input class="input" type="text" placeholder="Type user...">
         <button class="button">Search Profile</button>
     </section>
+    <section class="section-3">
+        <div class="profile-div">
+            <figure class="figure-profile-1">
+                <img src="" alt="">
+            </figure>
+            <div class="profile-info-div">
+                <label for="">Name: <span></span></label>
+                <label for="">Location: <span></span></label>
+                <label for="">Bio: <span></span></label>
+            </div>
+            <figure class="figure-profile-2">
+                <a href="#" target="_blank"><img src="" alt=""></a>
+                <a href="#" target="_blank"><img src="" alt=""></a>
+            </figure>
+        </div>
+        <div class="state">
+            <h1></h1>
+        </div>
+    </section>
     <footer class="footer">
-        Hecho por <a href="https://www.linkedin.com/in/orlandogonz/" target="_blank">Hugo Orlando Gonzalez</a>
-        GitHub <a href="https://github.com/hugoorlando/GitHubProfileFinder" target="_blank">Aquí</a>
+        Made by <a href="https://www.linkedin.com/in/orlandogonz/" target="_blank">Hugo Orlando Gonzalez</a>
+        GitHub <a href="https://github.com/hugoorlando/GitHubProfileFinder" target="_blank">Here</a>
     </footer>               
 </body>
 </html>
