--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
             <h1></h1>
         </div>
     </section>
+    <section class="section-3" id="section-3">
+        <h3>404 not found! :(</h3>
+        <p>I don't found info. Do you want to search again?</p>
+    </section>
     <footer class="footer">
         Made by <a href="https://www.linkedin.com/in/orlandogonz/" target="_blank">Hugo Orlando Gonzalez</a>
         GitHub <a href="https://github.com/hugoorlando/GitHubProfileFinder" target="_blank">Here</a>
